--- a/src/components/Bio/style.scss
+++ b/src/components/Bio/style.scss
@@ -1,6 +1,10 @@
 .bio {
   display: inline-block;
   box-sizing: border-box;
-  width: 50%;
+  margin:0 24px 0 0;
   height:100%;
+  font-family: 'Lato';
+  align-content: center;
+  justify-content: center;
+  text-align: justify;
 }
