--- a/src/components/Bio/style.scss
+++ b/src/components/Bio/style.scss
@@ -1,7 +1,7 @@
 .bio {
   display: inline-block;
   box-sizing: border-box;
-  margin:0 24px 0 0;
+  margin:0 24px 0 24px;
   height:100%;
   font-family: 'Lato';
   align-content: center;
