--- a/src/components/Bio/style.scss
+++ b/src/components/Bio/style.scss
@@ -6,5 +6,6 @@
   font-family: 'Lato';
   align-content: center;
   justify-content: center;
-  text-align: justify;
+  color: white;
+  font-size: 2rem;
 }
